1.0.4-devel
===========

 * Semi-intelligent sniffing adding for figuring out the charset
   when using mx.Tidy.  This closes
   http://dev.plone.org/plone/ticket/5006
   [rocky]

 * Internal links didn't work for event url field. This closes
   http://dev.plone.org/plone/ticket/5004
   [hannosch]

 * Various fixes for the iCal/vCal export (thx Steve for the patch):
    - timezone problems
    - folding lines longer than 75 octests (per RFC)
    - escaping commas, colons and semi-colons (per RFC)
    - adding URL and CONTACT fields
   This closes http://dev.plone.org/plone/ticket/4512.
   [hannosch]

 * the EventType field in an event lists all relevant event types for
   an event, not just one. Modify the iCal output logic to properly
   produce comma-seperated event types. Fixes
   http://dev.plone.org/plone/ticket/4881
   [wichert]

 * Updated thirdparty/icalendar to version iCalendar-0.11. Dropped the
   svn:external to codespeak SVN. This has the side-effect of ridding us
   of the annoying test failure with the Zope 2.9 testrunner which would
   pick up the icalendar tests even though they are neither importable nor
   pass in this setting.
   [stefan]

 * Made manage_afterPUT and manage_afterMKCOL use PATH_INFO to get at
   the original id for usage in the Title, so that in a WebDAV
   name-mangling environment the Title gets set to the original
   filename.
   [sidnei]

 * Added test for ATFolder and ATBTreeFolder MKCOL.
   [sidnei]

 * Modify getLocallyAllowedTypes and getImmediatelyAddableTypes to take
   a context in which type creation is to be tested. This is used to determine
   if a user can create a type in the current context instead of in a parent
   folder.
   http://dev.plone.org/plone/ticket/5255
   [wichert]

1.0.3-final 2006-01-20
======================

 * Fixed non-clickable thumbnails in thumbnail view for IE.
   https://trac.plone.org/plone/ticket/5119
   [hannosch]

1.0.2-final 2006-01-03
======================
