@@ -1,0 +1,7 @@
+<html>
+<head>
+<title>HTML Title</title>
+<!-- This file deliberately does not end as correct HTML, to make sure -->
+<!-- the HTML parser doesn't choke on that situation, which may very -->
+<!-- well happen with a large html file since the whole file is not -->
+<!-- read to save memory, at DAV PUT -->
