@@ -1,6 +1,11 @@
 1.0.4-devel
 ===========
 
+ * Uploading HTML via WebDAV now supports reading <title> tag to use 
+   as the title of the new content item.
+   http://dev.plone.org/plone/ticket/4877
+   [rocky]
+
  * Semi-intelligent sniffing adding for figuring out the charset
    when using mx.Tidy.  This closes
    http://dev.plone.org/plone/ticket/5006
